Fix math delimiters

--- a/vutil.sty
+++ b/vutil.sty
@@ -149,11 +149,11 @@
 \makeatother
 
 % Math stuff
-\DeclarePairedDelimiter\p{\left(}{\right)}
+\DeclarePairedDelimiter\p{(}{)}
 \let\b\relax
-\DeclarePairedDelimiter\b{\left[}{\right]}
+\DeclarePairedDelimiter\b{[}{]}
 \let\c\relax
-\DeclarePairedDelimiter\c{\left\{}{\right\}}
+\DeclarePairedDelimiter\c{\{}{\}}
 \let\abs\relax
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}
 \let\norm\relax
